@@ -43,6 +43,9 @@ syntax(2)
 -- Name of the system architecture (aka processor type).
 architecture = "x86_64"
 
+-- Maximum number of jobs (such as test case runs) to execute concurrently.
+parallelism = 16
+
 -- Name of the system platform (aka machine type).
 platform = "amd64"
 
