@@ -8,6 +8,13 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   test cases.  The goal is to eventually replace all the C testers with
   this new code.
 
+* Issue 2: Added the new 'parallelism' configuration property to
+  kyua.conf.  This setting indicates the degree of parallelism to use
+  when running test cases using the new executor.  Currently defaults
+  to 1 to preserve sequential behavior, but this will eventually be
+  bumped to a greater value once the new implementation gets some
+  mileage.
+
 * Changed temporary directory creation to always grant search
   permissions on temporary directories.  This is to prevent potential
   problems when running Kyua as root and executing test cases that
